fixed search bar getting stuck up

--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@ body {
   left: -250px;
 }
 
-.sidebar .suggestion-list {
+.suggestion-box {
   overflow-y: auto;
   max-height: calc(100vh - 101px);
 }
@@ -227,6 +227,24 @@ body {
   }
 }
 
+/* Scrollbar Styling */
+
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #ebebeb;
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb {
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+  background: #6d6d6d;
+}
+
 @media only screen and (max-width: 720px) {
   .top-bar {
     position: fixed;
@@ -243,7 +261,7 @@ body {
     left: 0;
   }
   .main {
-    width: 100vw;
+    width: 100%;
     padding-top: 55px;
   }
   .loading-suggestion {
@@ -291,6 +309,10 @@ body {
   }
   .search-box.focused .suggestion-box {
     top: 49px;
-    padding: 0 0.5rem;
+    margin: 0 0.5rem;
+    padding: 0;
+    width: calc(100% - 1rem);
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
   }
 }
